Change public names to have lkp or lukip prefix
Names that are publicly accessible when including lukip.h are always
visible to the person using the framework. Therefore, those names were
changed into having a "lukip" or "lkp" prefix to make sure they aren't
taken away by some other functionality the user has written.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "files.associations": {
         "stdint.h": "c",
         "lukip_output.h": "c",
-        "lukip.h": "c"
+        "lukip.h": "c",
+        "allocator.h": "c",
+        "stdlib.h": "c",
+        "lukip_allocator.h": "c",
+        "lukip_assert.h": "c"
     }
 }
